<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/hinttxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:text="@string/title_activity_registration"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/hinttxt" >

        <LinearLayout
            android:id="@+id/linearlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dip"
            android:orientation="vertical" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:src="@drawable/blogicon"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="#ffffff" >

                <EditText
                    android:id="@+id/name"
                    style="@style/registration_style"
                    android:hint="@string/name"
                    android:imeOptions="actionNext" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="#ffffff" >

                <EditText
                    android:id="@+id/address"
                    style="@style/registration_style"
                    android:hint="@string/add"
                    android:imeOptions="actionNext" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="#ffffff" >

                <EditText
                    android:id="@+id/email"
                    style="@style/registration_style"
                    android:hint="@string/email"
                    android:imeOptions="actionNext" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="#ffffff" >

                <EditText
                    android:id="@+id/number"
                    style="@style/registration_style"
                    android:hint="@string/number"
                    android:imeOptions="actionSend" />
            </RelativeLayout>

            <!-- Spinner Element -->

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#ffffff" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="I accept Terms and Condition"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:padding="5dip"
                android:textColor="#ffffff"
                android:visibility="visible" />

            <Button
                android:id="@+id/regBtn"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="#999999"
                android:padding="5dip"
                android:text="@string/reg"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>