<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true" >

    <RelativeLayout
        android:id="@+id/navigationbar"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="50dip" >
        
        <ImageButton 
            android:id="@+id/naviationdrawerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_drawer"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            />
        
        <TextView 
            android:id="@+id/title"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            />
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/header"
            android:layout_centerInParent="true"
            />
        
        <ImageButton 
            android:id="@+id/profileIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@drawable/profilecon"
            />
    </RelativeLayout>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomlayout" 
        android:layout_below="@+id/navigationbar" >

        <!-- The main content view -->
        
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <!-- The navigation drawer -->

        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#64B5F6"
            android:choiceMode="singleChoice"
            android:divider="#333333"
            android:dividerHeight="1dp" />
    </android.support.v4.widget.DrawerLayout>
    
    <LinearLayout
        android:id="@+id/bottomlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:weightSum="4" >

        <RelativeLayout
            android:id="@+id/emergency"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/call1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:src="@drawable/callicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/call1"
                android:layout_centerHorizontal="true"
                android:text="@string/call1"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/aboutus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/call2"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/logo"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/call2"
                android:layout_centerHorizontal="true"
                android:text="@string/call2"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sos"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/call3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:src="@drawable/callicon"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/call3"
                android:layout_centerHorizontal="true"
                android:text="@string/call3"
                android:textSize="12sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/sharerelay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/sharebtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sharebtn"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/share"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/partner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/call4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/businesspartnericon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/call4"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/call4"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>